--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="rate p-2 shadow">
-                        {{movie?.vote_average}}
+                        {{movie?.vote_average| number : '1.1-1'}}
                     </div>
                 </div>
                 <h3 class="h6 font-weight-bold text-center ">{{movie?.title}}</h3>  </a>
@@ -56,7 +56,7 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="rate p-2 shadow">
-                        {{tv?.vote_average}}
+                        {{tv?.vote_average| number : '1.1-1'}}
                     </div>
                 </div>
                 <h3 class="h6 font-weight-bold text-center">{{tv?.name}}</h3>
