--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,7 +14,7 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="rate p-2 shadow">
-                    {{movie?.vote_average}}
+                    {{movie?.vote_average| number : '1.1-1'}}
                 </div>
             </div>
             <h3 class="h6 font-weight-bold text-center">{{movie?.title||movie?.name}}</h3>  </a>
