--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -13,7 +13,7 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="rate p-2 shadow">
-                        {{tv?.vote_average}}
+                        {{tv?.vote_average| number : '1.1-1'}}
                     </div>
                 </div>
                 <h3 class="h6 font-weight-bold text-center">{{tv?.name}}</h3>  
